@@ -1,3 +1,8 @@
+2012-10-03 Wed  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): in mode unpatch, do
+	not immediately return if patch file is empty but check also quilt.
+
 2012-09-30 Sun  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES::manpages): Explain
